fix: overflow-y

--- a/css/small.css
+++ b/css/small.css
@@ -16,7 +16,8 @@ html {
 html, body {
 font-family: 'Sanchez', serif;
 background-color: var(--theme-color);
-height: 100%;
+max-width: 100%;
+overflow-x: hidden;
 }
 body { display: grid; grid-template-rows: auto 1fr auto; }
 
